# drf_plate_poll

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
inforce/: manage.py  pytest.ini
inforce/employee/: models.py  permissions.py  serializers.py  urls.py  views.py
inforce/employee/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_vote_create_date_vote_vote_of_user_on_date.py  0005_alter_vote_create_date.py
inforce/employee/tests/: test_employee_views.py
inforce/inforce/: asgi.py  settings.py  urls.py  wsgi.py
inforce/restaurant/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
inforce/restaurant/migrations/: 0001_initial.py  0002_alter_dish_price_alter_menu_day_of_week.py  0002_initial.py
inforce/restaurant/tests/: test_restaurant_views.py  test_views.py
inforce/users/: models.py  serializers.py  urls.py  views.py
inforce/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_role.py
